--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "axios": "^1.4.0"
+    "express": "^4.18.2",
+    "stripe": "^20.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
